--- a/_data/collection-index.yml
+++ b/_data/collection-index.yml
@@ -788,3 +788,8 @@
   contact: https://github.com/rafaph/devcontainer-features/issues
   repository: https://github.com/rafaph/devcontainer-features
   ociReference: ghcr.io/rafaph/devcontainer-features
+- name: Dev Container Features by weslyg
+  maintainer: weslyg
+  contact: https://github.com/weslyg/features/issues
+  repository:  https://github.com/weslyg/features
+  ociReference: ghcr.io/weslyg/features
